# social-media-aggregator

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: dist.yml  main.yml  pre-release.yml  python-package.yml
.tox/.package/: .tox-config1
.tox/.package/conda-meta/: history  libffi-3.4.4-hca03da5_0.json  ncurses-6.4-h313beb8_0.json  openssl-3.0.13-h1a28f6b_0.json  pip-23.3.1-py310hca03da5_0.json  python-3.10.14-hb885b13_0.json  readline-8.2-h1a28f6b_0.json  sqlite-3.41.2-h80987f9_0.json  tk-8.6.12-hb8d0fd4_0.json  wheel-0.41.2-py310hca03da5_0.json  xz-5.4.6-h80987f9_0.json  zlib-1.2.13-h5a0b063_0.json
.tox/.package/lib/: libcrypto.3.dylib  libcrypto.dylib  libncursesw.6.dylib  libpython3.10.dylib  libtcl8.6.dylib  libtinfow.6.dylib  libtk8.6.dylib  tclConfig.sh  tkConfig.sh
.tox/format/: .tox-config1
.tox/format/conda-meta/: ca-certificates-2024.3.11-hca03da5_0.json  expat-2.5.0-h313beb8_0.json  history  libcxx-14.0.6-h848a8c0_0.json  libffi-3.4.4-hca03da5_0.json  ncurses-6.4-h313beb8_0.json  openssl-3.0.13-h1a28f6b_0.json  pip-23.3.1-py312hca03da5_0.json  python-3.12.2-h99e199e_0.json  readline-8.2-h1a28f6b_0.json  (+6 more)
.tox/py310/: .tox-config1
exceptions/: __init__.py  logger.py  meta.py
regus_social_media.egg-info/: PKG-INFO  SOURCES.txt
scripts/: logger.py  meta.py
src/regus_social_media/: logger.py  meta.py
src/regus_social_media.egg-info/: SOURCES.txt  top_level.txt
src/social_media_aggregator/: logger.py  meta.py
src/social_media_aggregator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_logger.py  test_meta.py
(+565 files in other folders)
